Avoid text jump when the stream is paused
When the scrollbar goes from display none to being visible, the
text beside it can jump in-place. This change avoids that by making
the scrollbar invisible.

--- a/src/css/pages/SurahStream.scss
+++ b/src/css/pages/SurahStream.scss
@@ -50,8 +50,12 @@ body .root .content.theme {
 
   ul.body.stream.playing {
     overflow-y: auto;
-    &::-webkit-scrollbar {
-      display: none;
+    ::-webkit-scrollbar-track:hover,
+    ::-webkit-scrollbar-track:active,
+    ::-webkit-scrollbar-thumb,
+    ::-webkit-scrollbar-thumb:hover,
+    ::-webkit-scrollbar-thumb:active {
+      background-color: #FFF;
     }
   }
 
